--- a/Pr.html
+++ b/Pr.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project-1</title>
+    <title>Random Number Generator</title>
     <link rel="stylesheet" href="Pr.css">
 </head>
 <body>
-    <label id="countLabel">0</label><br>
-    <div id="btnContainer">
-        <button id="decreaseBtn" class="buttons">decrease</button>
-        <button id="reserBtn" class="buttons">reset</button>
-        <button id="increaseBtn" class="buttons">increase</button>
-    </div>
+    <button id="myButton">roll</button>
+    <label id="myLabel"></label>
+
+    <!-- So this shit is not working, IDK why?, but I'm gonna posting it on GitHub anyway -->
 
     <script src="Pr.js"></script>
 </body>
